#212 treat lazy initialization error for musicFolder